# QLtoQ3

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  windows-release.yml
locales/: en.toml  ru.toml
qltoq3/: __init__.py  __main__.py  aas.py  bench_aas_plan.py  bsp.py  cli.py  cli_parse.py  colors.py  compat.py  config.py  constants.py  convert.py  gui.py  l10n.py  md3.py  media.py  pk3.py  progress.py  qlcache.py  runner.py  shaders.py  tempdirs.py  updater.py  ziputil.py
qltoq3/bundled/: assets_index.json  expected_pak00.sha256
qltoq3/ui/: __init__.py
qltoq3/ui/tabs/: __init__.py  base.py  dependencies.py  logs.py  settings.py  sources.py  updates.py
tests/: test_cli_parse.py  test_l10n.py  test_shaders.py  test_updater.py  test_ziputil.py
